fix: #54 Img may be blurred in some cases

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,7 +41,7 @@
   user-select: none;
   max-width: 80vw;
   max-height: 80vh;
-  vertical-align: middle;
+  display: block;
   position: relative;
   transition: transform 0.3s ease-in-out;
   box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 20px 2px;
